fixed overlapping arrows on sm screens

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ h4 {
     margin-top: 5px;
 }
 
+.treegrid-expander {
+    width: auto;
+}
+
 #body_container {
     background-image: url("../images/RedDragon.png");
     background-size: 100%;
